fixed overflow background color

--- a/styles/index.css
+++ b/styles/index.css
@@ -1,9 +1,10 @@
 body {
     margin: 0;
+    background-color: aqua;
 }
 
 #root {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     margin: 0;
     top: 0;
